<resources>
    <string name="app_name">Authentification</string>
    <string name="title1">Sign Up</string>
    <string name="title2">Sign In</string>
    <string name="desc1">Pleas Login To Your Account</string>
    <string name="desc2">Pleas Create Your Account</string>
    <string name="hintusername">Enter Your User Name</string>
    <string name="hintemail">Enter Your Email</string>
    <string name="hintpassword">Enter Your Password</string>
    <string name="hintconfirm">Confirm Your Password</string>
    <string name="chain1">Don\'t have an account ? \u0020</string>
    <string name="chaine2">ShowPassword</string>
    <string name="chaine3">ShowConfirmPassword</string>
    <string name="forgetpass">Forgot Password !</string>
    <string name="chine3">Already have an account ?\u0020</string>
    <string name="logf">Sign In With Facebook ?</string>
    <string name="logg">Sign In With Google ?</string>
    <string name="regf">Sign Up With Facebook ?</string>
    <string name="regg">Sign Up With Google ?</string>
    <string name="OR"> OR </string>
    <string name="welcom">Welcome In Home</string>
    <string name="logout">Log Out</string>
    <string name="addnew">Add User</string>
    <string name="allusers">All Users</string>
    <string name="facebook_app_id">667269648023193</string>
    <string name="fb_login_protocol_scheme">fb667269648023193</string>
    <string name="titleContent">Title As Methode</string>
    <string name="titleAll">List Of Users</string>
    <string name="email">Email :</string>
    <string name="username">User Name :</string>
    <string name="save">Save Changes</string>
</resources>