<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title1"
            android:layout_marginTop="160dp"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc2"
            android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:autofillHints="emailAddress"
                android:hint="@string/hintusername"
                android:maxLines="1"
                android:layout_marginTop="40dp"
                android:inputType="text"
                android:background="@drawable/roud_back5"
                android:id="@+id/UsernameInput"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:padding="15dp"
            android:autofillHints="emailAddress"
            android:textSize="20sp"
            android:hint="@string/hintemail"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/roud_back5"
            android:id="@+id/EmailInp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roud_back5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hintpassword"
                android:textSize="20sp"
                android:autofillHints="password"
                android:padding="15dp"
                android:layout_marginEnd="40dp"
                android:maxLines="1"
                android:id="@+id/PasswordInp"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/showhidepassbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/chaine2"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/view" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roud_back5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hintconfirm"
                android:textSize="20sp"
                android:padding="15dp"
                android:autofillHints="password"
                android:layout_marginEnd="40dp"
                android:maxLines="1"
                android:id="@+id/ConfirmasswordInput"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/showhidepassCbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/chaine3"
                android:layout_marginEnd="20dp"
                android:src="@drawable/view" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/title1"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:id="@+id/btnRegister"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/btn_round"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1A000000"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/txtOr"
                android:layout_centerVertical="true" />


            <TextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OR"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1A000000"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/txtOr"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnGgll"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roud_back5"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/title2"
                android:src="@drawable/google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/regg"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/btnFb"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/roud_back5">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/facebook"
                android:contentDescription="@string/title2"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginEnd="30dp"
                android:text="@string/regf"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/chine3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSignin"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title2"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>