<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc1"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:padding="15dp"
            android:autofillHints="emailAddress"
            android:textSize="20sp"
            android:hint="@string/hintemail"
            android:maxLines="1"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/roud_back5"
            android:id="@+id/EmailInput"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roud_back5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hintpassword"
                android:textSize="20sp"
                android:autofillHints="password"
                android:padding="15dp"
                android:layout_marginEnd="40dp"
                android:maxLines="1"
                android:id="@+id/PasswordInput"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/showhidepasswordbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/chaine2"
                android:src="@drawable/view" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgetpass"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:id="@+id/forgotbtn"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/title2"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:id="@+id/btnLogin"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/btn_round"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1A000000"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/txtOr"
                android:layout_centerVertical="true"/>


            <TextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OR"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1A000000"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/txtOr"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/sign_in_button"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/roud_back5">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                android:layout_centerVertical="true"
                android:contentDescription="@string/title1"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginEnd="30dp"
                android:text="@string/logg"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:minHeight="48dp"
            android:paddingLeft="35dp"
            android:paddingTop="12dp"
            android:paddingRight="1dp"
            android:paddingBottom="12dp"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/chain1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSignup"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>